# amber-theme

./: .gitattributes  CONTRIBUTING.md  README.md  gitpush.sh  install.sh  meson.build
gnome-shell/: gnome-shell-high-contrast.css  gnome-shell.css
gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _extensions.scss
gnome-shell/src/: gnome-shell-high-contrast.css  gnome-shell.css
gnome-shell/src/gnome-shell-sass/: _colors.scss
gnome-shell/src/gnome-shell-sass/widgets/: _panel.scss  _search-entry.scss
gtk-2.0/: assets.txt  buttons.rc  check-radio.rc  gtkrc
gtk-3.0/: README.md  _apps.scss  _colors.scss  _common.scss  _drawing.scss  _other.scss  _variables.scss  assets.txt  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained.css  gtk-contained.scss  gtk-dark.css  gtk-dark.scss  gtk.css  gtk.scss
gtk/src/: meson.build
gtk/src/Amber/gtk-2.0/: assets.txt  gtkrc  meson.build
gtk/src/Amber/gtk-3.0/: _colors.scss  _common.scss  _custom.scss  _drawing.scss  gtk-dark.css  gtk.css  gtk.scss  meson.build
gtk/src/Amber/gtk-4.0/: _colors.scss  _common.scss  _custom.scss  _drawing.scss  gtk-dark.css  gtk.css  meson.build
src/: create-tarball.sh  index.theme.in  meson.build
src/gnome-shell/: gnome-shell-high-contrast.css  gnome-shell.css  meson.build
src/gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _extensions.scss
src/gtk-2.0/: gtkrc
src/gtk-3.0/: _apps.scss  _common.scss  _drawing.scss  assets.txt  gtk-dark.css  gtk.css  meson.build
src/xfwm4/: meson.build
xfwm4/: themerc
