xfwm4_dir = join_paths(theme_dir, 'xfwm4')

# static theme files to copy
xfwm4_theme = [
  'themerc',
]

# static asset files to copy
xfwm4_asset_data_sources = [
  'close-active.png',
  'close-inactive.png',
  'close-prelight.png',
  'close-pressed.png',
  'hide-active.png',
  'hide-inactive.png',
  'hide-prelight.png',
  'hide-pressed.png',
  'maximize-active.png',
  'maximize-inactive.png',
  'maximize-prelight.png',
  'maximize-pressed.png',
  'maximize-toggled-active.png',
  'maximize-toggled-inactive.png',
  'maximize-toggled-prelight.png',
  'maximize-toggled-pressed.png',
  'menu-active.png',
  'menu-inactive.png',
  'menu-pressed.png',
  'shade-active.png',
  'shade-inactive.png',
  'shade-pressed.png',
  'stick-active.png',
  'stick-inactive.png',
  'stick-pressed.png',
  'title-1-active.png',
  'title-1-inactive.png',
  'title-2-active.png',
  'title-2-inactive.png',
  'title-3-active.png',
  'title-3-inactive.png',
  'title-4-active.png',
  'title-4-inactive.png',
  'title-5-active.png',
  'title-5-inactive.png',
  'top-left-active.png',
  'top-left-inactive.png',
  'top-right-active.png',
  'top-right-inactive.png',
  'left-active.png',
  'left-inactive.png',
  'right-active.png',
  'right-inactive.png',
  'bottom-active.png',
  'bottom-inactive.png',
  'bottom-left-active.png',
  'bottom-left-inactive.png',
  'bottom-right-active.png',
  'bottom-right-inactive.png',
]

# Install theme files
install_data(xfwm4_theme, install_dir: xfwm4_dir)

# Install asset files
install_data(xfwm4_asset_data_sources, install_dir: xfwm4_dir)
